--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /TravelCards/bin/Debug
+/TravelCards/obj/Debug
+/_ReSharper.Caches/ReSharperPlatformVs144.TravelCards
